basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: core.harbor.trvcloud.com/demo/busybox:latest
