kuard.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: kuard
  name: kuard
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: blog
  type: LoadBalancer
  loadBalancerIP:  10.20.20.55
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  labels:
    name: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kuard
  template:
    metadata:
      labels:
        name: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
