tomcat-with-configmap.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-lb
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-test
  labels:
    app: web
spec:
  containers:
    - name: web
      image: tomcat:latest
      ports:
        - name: web
          containerPort: 8080
          protocol: TCP
      volumeMounts:
      - name: config-volume
        mountPath: /usr/local/tomcat/webapps/test/
  volumes:
    - name: config-volume
      configMap:
        name: tomcat-config-v1
  restartPolicy: Never
